--- a/parkunits/index.html
+++ b/parkunits/index.html
@@ -27,7 +27,7 @@
 
 <div class="bannerhead">
 	<div class="pagetitle">National Park Units Checklist</div>
-	<div class="pagetitlecounter"><div id="ParkCounter">0</div> out of 423 (<div id="ParkPercent">0</div>%)</div>
+	<div class="pagetitlecounter"><div id="ParkCounter">0</div> out of 429 (<div id="ParkPercent">0</div>%)</div>
 
 </div>
 
@@ -168,6 +168,7 @@
  <div id="yose" class="parkdot">Yosemite NP</div>
 
 <!--------- Colorado --------------!>
+ <div id="amch" class="parkdot">Amache NHS</div>
  <div id="beol" class="parkdot">Bent's Old Fort NHS</div>
  <div id="blca" class="parkdot">Black Canyon of the Gunnison NP</div>
  <div id="colm" class="parkdot">Colorado NM</div>
@@ -175,7 +176,7 @@
  <div id="dino" class="parkdot">Dinosaur NM</div>
  <div id="flfo" class="parkdot">Florissant Fossil Beds NM</div>
  <div id="grsa" class="parkdot">Great Sand Dunes NP</div>
- <div id="grsap" class="parkdot">Great Sand Dunes Preserve N PRES</div>
+ <div id="grsap" class="parkdot">Great Sand Dunes N PRES</div>
  <div id="hove" class="parkdot">Hovenweep NM</div>
  <div id="meve" class="parkdot">Mesa Verde NP</div>
  <div id="romo" class="parkdot">Rocky Mountain NP</div>
@@ -236,7 +237,8 @@
 
 <!--------- Illinois --------------!>
  <div id="liho" class="parkdot">Lincoln Home NHS</div>
- <div id="pull" class="parkdot">Pullman NM</div>
+ <div id="neph" class="parkdot">New Philadelphia NHS</div>
+ <div id="pull" class="parkdot">Pullman NHP</div>
 
 <!--------- Indiana --------------!>
  <div id="gero" class="parkdot">George Rogers Clark NHP</div>
@@ -300,6 +302,7 @@
  <div id="lowe" class="parkdot">Lowell NHP</div>
  <div id="mima" class="parkdot">Minute Man NHP</div>
  <div id="nebe" class="parkdot">New Bedford Whaling NHP</div>
+ <div id="neen" class="parkdot">New England NST</div>
  <div id="sama" class="parkdot">Salem Maritime NHS</div>
  <div id="sair" class="parkdot">Saugus Iron Works NHS</div>
  <div id="spar" class="parkdot">Springfield Armory NHS</div>
@@ -307,6 +310,7 @@
 <!--------- Michigan--------------!>
  <div id="isro" class="parkdot">Isle Royale NP</div>
  <div id="kewe" class="parkdot">Keweenaw NHP</div>
+ <div id="noco" class="parkdot">North Country NST</div>
  <div id="piro" class="parkdot">Pictured Rocks NL</div>
  <div id="rira" class="parkdot">River Raisin NBP</div>
  <div id="sibe" class="parkdot">Sleeping Bear Dunes NL</div>
@@ -319,6 +323,7 @@
 
 <!--------- Mississippi --------------!>
  <div id="brce" class="parkdot">Brices Cross Roads NB</div>
+ <div id="till" class="parkdot">Emmett Till and Mamie Till-Mobley NM</div>
  <div id="memy" class="parkdot">Medgar and Myrlie Evers Home NM</div>
  <div id="natc" class="parkdot">Natchez NHP</div>
  <div id="natr" class="parkdot">Natchez Trace Parkway </div>
@@ -591,6 +596,7 @@
 
 <!--------- Wisconsin --------------!>
  <div id="apis" class="parkdot">Apostle Islands NL</div>
+ <div id="iatr" class="parkdot">Ice Age NST</div>
  <div id="sacn" class="parkdot">Saint Croix NSR</div>
 
 <!--------- Wyoming --------------!>
