--- a/guessthecountry/index.html
+++ b/guessthecountry/index.html
@@ -37,7 +37,7 @@ Longest Streak: <div id="NumStreakLong" class="StreakNum">0</div>
 
 <form autocomplete="off">
 	<div id="Question">
-	<div style="white-space: nowrap; display: inline;"><div class="capitalid"></div> is the capital of where?</div><br><br>
+	<div style="white-space: nowrap; display: inline;"><div class="capitalid"></div> is the capital of which country?</div><br><br>
 
 
   <div class="autocomplete" style="width:300px;">
