--- a/questions/index.html
+++ b/questions/index.html
@@ -25,7 +25,7 @@
 
 
 
-	<div class="pagename">Questions</div>
+	<div class="pagename">ask me a question</div>
 
 
 
@@ -38,8 +38,8 @@
 
 
 <div class="startstop">
-<div onclick="startwheel();" class="startstopbutton buttonstart">Start</div>
-<div onclick="stopwheel();"  class="startstopbutton buttonstop">Stop</div>
+<div onclick="startwheel();" class="startstopbutton buttonstart" id="startbutton">Start</div>
+<div onclick="stopwheel();"  class="startstopbutton buttonstop stopbuttonon" id="stopbutton">Stop</div>
 </div>
 
 
