--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div><a href="worldcapitals/index.html">World Capitals<span class="smalltext"><br>(Guess the Capital)</span></a></div>
 	<div><a href="guessthecountry/index.html">World Capitals<span class="smalltext"><br>(Guess the Country)</span></a></div>
 	<div><a href="findyourpark/index.html">Find Your Park</a></div>
-	<div><a href="questions/index.html">Question Generator</a></div>
+	<div><a href="questions/index.html">Dial a Question</a></div>
 	</div>
 	</div>
 
