--- a/questions/index.html
+++ b/questions/index.html
@@ -46,11 +46,29 @@
 
 
 
+
+
+
+
+
+
+
 </div>
 </div>
 
 
-
+<div id="flipswitch" class="flipswitch flipswitchon">
+<div class="flipswitch-switch">
+<label class="switch">
+  <input type="checkbox" checked id="questioncheckbox">
+  <span class="slider round"></span>
+</label>
+</div>
+<div class="flipswitch-questions">
+	Quick Questions<br>
+	Discussion Questions
+</div>
+</div>
 
 </body>
 </html>
