--- a/cruise/index.html
+++ b/cruise/index.html
@@ -18,43 +18,42 @@
 
 
 <div class="linkcolumn" style="text-align: center;">
+<a href="iceland-cruise-puzzles.pdf">
+<img src="iceland-xword-icon.png" style="width: 200px; border: 1px solid #000;">
+<div style="margin-top: 10px;">Download Puzzles<br>(pdf file)</div>
+</a>
+</div>
+
+<div class="linkcolumn" style="text-align: center;">
+<a href="https://puzzleme.amuselabs.com/pmm/crossword?id=089afea9&set=81eb3ff8c8e949cd1ffa6f94de47fc5e14e207d059320cccb602583b960a440b" target=_blank>
+<img src="xword-online.png" style="width: 200px; border: 0px solid #000;">
+<div style="margin-top: 10px;">Solve the Crossword<br>Online</div>
+</a>
+</div>
+
+
+
+</div>
+
+
+<div class="listoflinks" style="margin: auto;">
+
+<div class="linkcolumn" style="text-align: center;">
 <a href="iceland-cruise-2025.png">
 <img src="iceland-cruise-2025.png" style="width: 200px; border: 1px solid #000;">
-<div style="margin-top: 10px;">Download Full Size<br><span style="font-size: 20px;">(July cruise map)</span></div>
+<div style="margin-top: 10px;">Download Full Size<br>Scale Map</div>
 </a>
 </div>
 
 <div class="linkcolumn" style="text-align: center;">
 <a href="iceland-cruise-2025-pirate.png">
 <img src="iceland-cruise-2025-pirate.png"  style="width: 200px; border: 1px solid #000;">
-<div style="margin-top: 10px;">Download Full Size<br><span style="font-size: 20px;">(July pirate map)</span></div>
+<div style="margin-top: 10px;">Download Full Size<br>Pirate Map</div>
 </a>
 </div>
 
 </div>
 
-
-
-
-
-<div class="listoflinks" style="margin: auto;">
-
-
-<div class="linkcolumn" style="text-align: center;">
-<a href="iceland-cruise-2025-summer.png">
-<img src="iceland-cruise-2025-summer.png" style="width: 200px; border: 1px solid #000;">
-<div style="margin-top: 10px;">Download Full Size<br><span style="font-size: 20px;">(Summer cruise map)</span></div>
-</a>
-</div>
-
-<div class="linkcolumn" style="text-align: center;">
-<a href="iceland-cruise-2025-pirate-summer.png">
-<img src="iceland-cruise-2025-pirate-summer.png"  style="width: 200px; border: 1px solid #000;">
-<div style="margin-top: 10px;">Download Full Size<br><span style="font-size: 20px;">(Summer pirate map)</span></div>
-</a>
-</div>
-
-</div>
 
 
 
