--- a/cruise/index.html
+++ b/cruise/index.html
@@ -12,22 +12,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<p style="text-align: center; font-size: 26px; line-height: 1em; margin-top: 20px;">Cruise Puzzles & Maps<br>Reykjavik to New York - July 2025</p>
+
+<div class="listoflinks" style="margin: auto; max-width: 600px;">
 
 
-<div class="listoflinks" style="margin: auto;">
-
-
-<div class="linkcolumn" style="text-align: center;">
+<div class="linkcolumn" style="text-align: center; margin: 10px;">
 <a href="iceland-cruise-puzzles.pdf">
-<img src="iceland-xword-icon.png" style="width: 200px; border: 1px solid #000;">
-<div style="margin-top: 10px;">Download Puzzles<br>(pdf file)</div>
+<img src="iceland-xword-icon.png" style="width: 150px; border: 0px solid #000;">
+<div style="margin-top: 10px; font-size: 26px; line-height: 1em;">Download 4 Puzzles<br>(pdf file)</div>
 </a>
 </div>
 
-<div class="linkcolumn" style="text-align: center;">
+<div class="linkcolumn" style="text-align: center; margin: 10px;">
 <a href="https://puzzleme.amuselabs.com/pmm/crossword?id=089afea9&set=81eb3ff8c8e949cd1ffa6f94de47fc5e14e207d059320cccb602583b960a440b" target=_blank>
-<img src="xword-online.png" style="width: 200px; border: 0px solid #000;">
-<div style="margin-top: 10px;">Solve the Crossword<br>Online</div>
+<img src="xword-online.png" style="width: 150px; border: 0px solid #000;">
+<div style="margin-top: 10px; font-size: 26px; line-height: 1em;">Solve the Crossword<br>Online</div>
 </a>
 </div>
 
@@ -36,19 +36,19 @@
 </div>
 
 
-<div class="listoflinks" style="margin: auto;">
+<div class="listoflinks" style="margin: auto; max-width: 600px;">
 
-<div class="linkcolumn" style="text-align: center;">
+<div class="linkcolumn" style="text-align: center; margin: 10px;">
 <a href="iceland-cruise-2025.png">
-<img src="iceland-cruise-2025.png" style="width: 200px; border: 1px solid #000;">
-<div style="margin-top: 10px;">Download Full Size<br>Scale Map</div>
+<img src="iceland-cruise-2025.png" style="width: 150px; border: 1px solid #000;">
+<div style="margin-top: 10px; font-size: 26px; line-height: 1em; text-wrap: balance;">Download Full Size Scale Map</div>
 </a>
 </div>
 
-<div class="linkcolumn" style="text-align: center;">
+<div class="linkcolumn" style="text-align: center; margin: 10px;">
 <a href="iceland-cruise-2025-pirate.png">
-<img src="iceland-cruise-2025-pirate.png"  style="width: 200px; border: 1px solid #000;">
-<div style="margin-top: 10px;">Download Full Size<br>Pirate Map</div>
+<img src="iceland-cruise-2025-pirate.png"  style="width: 150px; border: 1px solid #000;">
+<div style="margin-top: 10px; font-size: 26px; line-height: 1em; text-wrap: balance;">Download Full Size Pirate Map</div>
 </a>
 </div>
 
