--- a/guesstheborders/index.html
+++ b/guesstheborders/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head>
-<title>Guess the Borders</title>
+<title>Find the Borders</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 
 <div id="GameOuter">
 
-<div class="PageTitle">Guess the Borders</div>
+<div class="PageTitle">Find the Borders</div>
 <div id="GameBoard">
 
 <div class="GameQuestion">
@@ -84,7 +84,7 @@ The <span class="stateorcountry"></span> is: <div id="StateAnnounce" class="stat
 
 
 <div id="regionChooser" class="centered">
-  <h2>Guess the Borders</h2>
+  <h2>Find the Borders</h2>
 <div class="regionshell">
   <div onclick="location.href='?region=state'" class="onhover">U.S. States</div>
   <div onclick="location.href='?region=country'"  class="onhover">World Countries</div>
