--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<div><a href="worldcapitals/index.html">World Capitals<span class="smalltext"><br>(Guess the Capital)</span></a></div>
 	<div><a href="guessthecountry/index.html">World Capitals<span class="smalltext"><br>(Guess the Country)</span></a></div>
 	<div><a href="findyourpark/index.html">Find Your Park</a></div>
+	<div><a href="guesstheborders/index.html">Find the Borders</a></div>
 	<div><a href="https://dialaquestion.com">Dial a Question</a></div>
 	</div>
 	</div>
