--- a/guesstheborders/index.html
+++ b/guesstheborders/index.html
@@ -23,7 +23,7 @@
 <div id="GameBoard">
 
 <div class="GameQuestion">
-The <span class="stateorcountry"></span> is: <div id="StateAnnounce" class="statename"></div>.<br>
+<div id="StateAnnounce" class="statename"></div>
 <div class="statename"></div> borders <div id="BorderCount"></div>.
 <div id="gamestatus"></div>
 </div>
