--- a/dip-a-chip/index.html
+++ b/dip-a-chip/index.html
@@ -14,6 +14,10 @@
 
 <div class="game-setup dip-table">
 
+		<div id="bonusmessageshell"><div id="bonusmessage"></div></div>
+
+
+
 
 <div class="game-title">Dip-A-Chip</div>
 <div id="scoreboard">Score: 0</div>
@@ -21,8 +25,7 @@
 
 	<div style="position: relative; margin: auto; margin-top: -40px;">
 		<div style="margin-left: -40px; margin-top: 60px; position: relative;">
-		<div id="chip" data-chip="plain">
-		</div>
+		<div id="chip" data-chip="plain"></div>
 		</div>
 	</div>
 </div>
@@ -56,7 +59,7 @@
 
 
 
-<div  class="reset-button">
+<div  class="reset-button" style="display: none;">
 <button onclick="resetGame()">Reset Game</button>
 </div>
 
