--- a/dip-a-chip/index.html
+++ b/dip-a-chip/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dip-a-Chip</title>
+  <title>Dippin' Chips</title>
+
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Titan+One&display=swap" rel="stylesheet">
 
  <link rel="stylesheet" type="text/css" href="dipachip.css">
 </head>
@@ -19,7 +21,7 @@
 
 
 
-<div class="game-title">Dip-A-Chip</div>
+<div class="game-title">Dippin' Chips</div>
 <div id="scoreboard">Score: 0</div>
     <div id="eatZone">EAT</div>
 
