--- a/guesstheborders/index.html
+++ b/guesstheborders/index.html
@@ -23,10 +23,11 @@
 <div id="GameBoard">
 
 <div class="GameQuestion">
-<div id="StateAnnounce" class="statename"></div>
-<div class="statename"></div> borders <div id="BorderCount"></div>.
-<div id="gamestatus"></div>
+	<div id="StateAnnounce" class="statename"></div>
+	<div style="text-align: center;"><div class="statename"></div> borders <div id="BorderCount"></div>.</div>
+	<div id="gamestatus"></div>
 </div>
+
 
 <div class="GameAnswer">
 
