--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Meera+Inimai&family=Orelega+One&family=Patrick+Hand+SC&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Atma:wght@500&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="maps.css">
 <link rel="icon" type="image/x-icon" href="maps-favicon.png">
 
@@ -28,7 +26,6 @@
 	<div><a href="parkunits/index.html">National Park Units</a></div>
 	<div><a href="highpoints/index.html">State High Points</a></div>
 	<div><a href="ballparks/index.html">Baseball Stadiums</a></div>
-
 	</div>
 
 	<div class="linkcolumn">
@@ -37,10 +34,18 @@
 	<div><a href="guessthecountry/index.html">World Capitals<span class="smalltext"><br>(Guess the Country)</span></a></div>
 	<div><a href="findyourpark/index.html">Find Your Park</a></div>
 	<div><a href="guesstheborders/index.html">Find the Borders</a></div>
-	<div><a href="https://dialaquestion.com">Dial a Question</a></div>
-	</div>
 	</div>
 
+
+	<div class="linkcolumn">
+	<div class="sectiontitle">Fun & Games</div>
+	<div><a href="https://dialaquestion.com">Dial a Question</a></div>
+	<div><a href="https://dialaquestion.com/rather">Would You Rather...?</a></div>
+	<div><a href="poison/index.html">Poison at the Bagel Convention<span class="smalltext"><br>An Interactive Mystery</span></a></div>
+	</div>
+
+
+	</div>
 
 </div>
 </div>
