--- a/poison/index.html
+++ b/poison/index.html
@@ -169,6 +169,7 @@ text-decoration: none;
   .suspect-profiles {justify-content: flex-start;}
   .suspect-profiles > div {flex: 0 0 calc(50% - 28px);}
   .suspect-profiles a {padding: 10px;}
+  .link-internal {width: 100%; text-align: center; box-sizing: border-box;}
   
   #ui-bar.stowed~#story {
     margin-left: 3.5em;
