--- a/poison/index.html
+++ b/poison/index.html
@@ -631,7 +631,7 @@ You schedule a press conference for 10AM to discuss the details, and dream about
       &lt;&lt;showImage &quot;inga&quot;&gt;&gt;
     &lt;/div&gt;
     &lt;div class=&quot;scene-content&quot;&gt;
-    Yes, I totes know Jeff! I promised my community that I would Insta his graham cracker crust. But he literally ghosted me to do the Patisserie Podcast. It was a total betrayal of my brand! The trolls literally exploded my DMs for days!
+    Yes, I totes know Jeff! I promised my community that I would Insta his graham cracker crust. But he literally ghosted me to do the Dough Show Podcast. It was a total betrayal of my brand! The trolls literally exploded my DMs for days!
 
 But I would never &lt;i&gt;poison&lt;/i&gt; him. I am manifesting positivity right now, and that would totally crash my karma!
     
