--- a/poison/index.html
+++ b/poison/index.html
@@ -169,7 +169,7 @@ text-decoration: none;
   .suspect-profiles {justify-content: flex-start;}
   .suspect-profiles > div {flex: 0 0 calc(50% - 28px);}
   .suspect-profiles a {padding: 10px;}
-  .link-internal {width: 100%; text-align: center; box-sizing: border-box;}
+  .link-internal {width: 100%; text-align: center; box-sizing: border-box; text-wrap: balance;}
   
   #ui-bar.stowed~#story {
     margin-left: 3.5em;
@@ -530,7 +530,7 @@ I think &lt;b&gt;Fred&lt;/b&gt; works in the 177th floor of a New York office, h
     &lt;div class=&quot;scene-content&quot;&gt;
 Poisonous spores? Good gravy, what a coincidence! I am an amateur horticulturist! I just love my plants so much. I have the best garden this side of Topeka. My flower bed is a studio full of fabulous prizes!
 
-But oh no, I try my best not to grow anything dangerous. The only toxic thing in my garden is poison ivy, and that itches like a bugger. Whenever I see those leaves of three, I just say,&quot;No whammy, no whammy!&quot;  Skin rash? No thanks! I&#39;ll take what&#39;s behind door number two instead.
+But oh no, I try my best not to grow anything dangerous. The only toxic thing in my garden is poison ivy, and that itches like a bugger. Whenever I see those leaves of three, I just say, &quot;No whammy, no whammy!&quot;  Skin rash? No thanks! I&#39;ll take what&#39;s behind door number two instead.
 
 But last night I was chatting with that fabulous baker &lt;b&gt;Art&lt;/b&gt;. He was asking all about the plants I cultivate, but his knowledge of seasonings is miles ahead of mine. Then &lt;b&gt;Mary&lt;/b&gt; came over, and started asking about plant-based baking ingredients. I don&#39;t think she likes me much, but she is just such a charmin&#39; darlin&#39;!
  
