--- a/poison/index.html
+++ b/poison/index.html
@@ -216,7 +216,7 @@ The desk manager will confirm the seal of my electronic door lock remained unbro
       &lt;&lt;showImage &quot;art&quot;&gt;&gt;
     &lt;/div&gt;
     &lt;div class=&quot;scene-content&quot;&gt;
-&lt;i&gt;Mais oui&lt;/i&gt;, I am aquainted with Jeffrey. We have engaged in a tepid culinary competition for decades. He has been thieving my recipes for years. Or maybe I&#39;ve been thieving his. The order escapes my mind. However, it matters little in the context of irreproachable  confectionary immaculacy, of which my patisserie is unmatched.
+&lt;i&gt;Mais oui&lt;/i&gt;, I am aquainted with Jeffrey. We have engaged in a tepid culinary competition for decades. He has been thieving my recipes for years. Or maybe I&#39;ve been thieving his. The order escapes my mind. However, it matters little in the context of irreproachable  confectionary immaculacy, of which my pâtisserie is unmatched.
 
 However I would never &lt;i&gt;poison&lt;/i&gt; the man. I will get my vengence through the more honorable means of total bakery domination. Not poison. 
 
@@ -296,7 +296,7 @@ Mais oui, I can spare a moment for an interview, however we must be brief. My so
     &lt;div class=&quot;scene-content&quot;&gt;
 Jeff puts a schmear of cream cheese on the first bagel. &quot;Hmm, this smells off,&quot; he says, taking a bite. &quot;Yes, this is off. I think I grabbed the wrong cream cheese.&quot;
 
-Jeff goes back to his refrigerator and comes back with a fresh bowl of cream cheese. He spreads the new cream cheese on a stack of six bagels, and hands them out to the VIPs.
+Jeff retreats to his refrigerator and comes back with a fresh bowl of cream cheese. He spreads the new cream cheese on a stack of six bagels, and hands them out to the VIPs.
 
 [[Eat the Triple-Everything Bagel]] 
     &lt;/div&gt;
@@ -586,7 +586,7 @@ The detectives scoff.  &quot;Please, this is a serious situation,&quot; the lead
       &lt;&lt;showImage &quot;paper-poison&quot;&gt;&gt;
     &lt;/div&gt;
     &lt;div class=&quot;scene-content&quot;&gt;
-As the paramedics tend to Jeff the Chef, you look around at the five other VIPs. 
+As the paramedics tend to Jeff the Chef, you suspiciously check out the five other VIPs. 
 
 Your newspaper review has suddenly gotten a lot more interesting.  Now you are writing a story about:
 
@@ -1336,7 +1336,7 @@ You look through your notes and realize the detective is right. How embarrassing
 
 &quot;I never meant to poison the Chef,&quot; Mary pauses. Tears well in her eyes, and her lip quivers. 
 
-She continues, &quot;I never meant to poison the Chef because I meant to poison you all! I wanted to take down the whole bagel industry. It was a hostile rebranding attempt.&quot;
+She continues, &quot;I never meant to poison the Chef... because I meant to poison you all! I wanted to take down the whole bagel industry. It was a hostile rebranding attempt.&quot;
 
 &quot;So I snuck into the Chef&#39;s password protected refrigerator (his password was &lt;i&gt;DoughBoy76&lt;/i&gt;, by the way), and I poisoned the cream cheese. But Jeff the Chef was a hero archtype. He took one bite of the poisoned bagel knew something was wrong. He immediately switched to a non-toxic cream cheese, saving you all from gut-wrenching gastronomical doom.&quot;
 
