--- a/twine/poison/index.html
+++ b/twine/poison/index.html
@@ -743,49 +743,49 @@ Then you submit the headline for tomorrow&#39;s paper:
 
 &lt;div class=&quot;Profile-Inga&quot;&gt;
 &lt;&lt;if $IngaAccused is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/inga.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/inga.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Headline:&lt;/span&gt; &lt;i&gt;&lt;b&gt;[[INFLUENCER Poisons Chef!]]&lt;/b&gt;&lt;/i&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/inga.jpg&quot; style=&quot;opacity: .5&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/inga.jpg&quot; style=&quot;opacity: .5&quot;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;Profile-Fred&quot;&gt;
 &lt;&lt;if $FredAccused is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/fred.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/fred.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Headline:&lt;/span&gt; &lt;i&gt;&lt;b&gt;[[FROZEN FOOD REP Poisons Chef!]]&lt;/b&gt;&lt;/i&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/fred.jpg&quot;  style=&quot;opacity: .5&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/fred.jpg&quot;  style=&quot;opacity: .5&quot;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;/div&gt;
 
 
 &lt;div class=&quot;Profile-Art&quot;&gt;
 &lt;&lt;if $ArtAccused is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/art.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/art.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Headline:&lt;/span&gt; &lt;i&gt;&lt;b&gt;[[ARTISAN BAKER Poisons Chef!]]&lt;/b&gt;&lt;/i&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/art.jpg&quot; style=&quot;opacity: .5&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/art.jpg&quot; style=&quot;opacity: .5&quot;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;/div&gt;
 
 
 &lt;div class=&quot;Profile-Mary&quot;&gt;
 &lt;&lt;if $MaryAccused is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/mary.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/mary.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Headline:&lt;/span&gt; &lt;i&gt;&lt;b&gt;[[MAGAZINE EDITOR Poisons Chef!]]&lt;/b&gt;&lt;/i&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/mary.jpg&quot; style=&quot;opacity: .5&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/mary.jpg&quot; style=&quot;opacity: .5&quot;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;/div&gt;
 
 
 &lt;div class=&quot;Profile-Gayle&quot;&gt;
 &lt;&lt;if $GayleAccused is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/gayle.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/gayle.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Headline:&lt;/span&gt; &lt;i&gt;&lt;b&gt;[[GAME SHOW WINNER Poisons Chef!]]&lt;/b&gt;&lt;/i&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/gayle.jpg&quot; style=&quot;opacity: .5&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/gayle.jpg&quot; style=&quot;opacity: .5&quot;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;/div&gt;
 
@@ -901,7 +901,7 @@ There were 5 VIPs at the bagel tasting:
 &lt;div class=&quot;suspect-profiles&quot; style=&quot;text-align: left; font-size: .9em;&quot;&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/inga.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/inga.jpg&quot;&gt;
 &lt;b style=&quot;font-size: 1.1em;&quot;&gt;Inga the Influencer&lt;/b&gt;
 &lt;ul&gt;
 &lt;li&gt;24 years old&lt;/li&gt;
@@ -912,7 +912,7 @@ There were 5 VIPs at the bagel tasting:
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/fred.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/fred.jpg&quot;&gt;
 &lt;b style=&quot;font-size: 1.1em;&quot;&gt;Fred the Frozen Food Magnate&lt;/b&gt;
 &lt;ul&gt;
 &lt;li&gt;54 years old&lt;/li&gt;
@@ -923,7 +923,7 @@ There were 5 VIPs at the bagel tasting:
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/art.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/art.jpg&quot;&gt;
 &lt;b style=&quot;font-size: 1.1em;&quot;&gt;Art the Artisan Baker&lt;/b&gt;
 &lt;ul&gt;
 &lt;li&gt;42 years old&lt;/li&gt;
@@ -934,7 +934,7 @@ There were 5 VIPs at the bagel tasting:
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/mary.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/mary.jpg&quot;&gt;
 &lt;b style=&quot;font-size: 1.1em;&quot;&gt;Mary the Magazine Editor&lt;/b&gt;
 &lt;ul&gt;
 &lt;li&gt;36 years old&lt;/li&gt;
@@ -946,7 +946,7 @@ There were 5 VIPs at the bagel tasting:
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/gayle.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/gayle.jpg&quot;&gt;
 &lt;b style=&quot;font-size: 1.1em;&quot;&gt;Gayle the Game Show Winner&lt;/b&gt;
 &lt;ul&gt;
 &lt;li&gt;48 years old&lt;/li&gt;
@@ -975,7 +975,7 @@ You look through your notes and realize the detective is right. How embarrassing
     &lt;/div&gt;
   &lt;/div&gt;</tw-passagedata><tw-passagedata pid="48" name="Review Suspect Notes" tags="noProfilesLink" position="300,300" size="100,100">&lt;&lt;showAllProfiles&gt;&gt;
 &lt;div style=&quot;text-align: center;&quot;&gt;&lt;&lt;back&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="49" name="Start" tags="noProfilesLink" position="600,100" size="100,100">&lt;div style=&quot;text-align: center;&quot; class=&quot;title-page&quot;&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/poster.jpg&quot; style=&quot;width: 90%; max-width: 800px;&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/poster.jpg&quot; style=&quot;width: 90%; max-width: 800px;&quot;&gt;
 
 [[Begin|The Assignment]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="50" name="StoryInit" tags="" position="100,100" size="100,100">&lt;&lt;set $storyTitle = &quot;Poison at the Bagel Convention&quot;&gt;&gt;
@@ -1118,35 +1118,35 @@ So here&#39;s what we know:
 &lt;&lt;/nobr&gt;&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="56" name="Widgets - Profiles" tags="widget" position="100,900" size="100,100">&lt;&lt;widget &quot;showAllProfiles&quot;&gt;&gt;&lt;div class=&quot;suspect-profiles&quot;&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/inga.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/inga.jpg&quot;&gt;
 &lt;b&gt;Inga the Influencer&lt;/b&gt;
 
 $IngaAllFacts
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/fred.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/fred.jpg&quot;&gt;
 &lt;b&gt;Fred the Frozen Food Magnate&lt;/b&gt;
 
 $FredAllFacts
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/art.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/art.jpg&quot;&gt;
 &lt;b&gt;Art the Artisan Baker&lt;/b&gt;
 
 $ArtAllFacts
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/mary.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/mary.jpg&quot;&gt;
 &lt;b&gt;Mary the Magazine Writer&lt;/b&gt;
 
 $MaryAllFacts
 &lt;/div&gt;
 
 &lt;div&gt;
-&lt;img src=&quot;https://www.mapsandlines.com/poison/gayle.jpg&quot;&gt;
+&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/gayle.jpg&quot;&gt;
 &lt;b&gt;Gayle the Game Show Winner&lt;/b&gt;
 
 $GayleAllFacts
@@ -1165,20 +1165,20 @@ $GayleAllFacts
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&quot;Profile-Inga&quot;&gt;&lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $IngaDone is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/inga.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/inga.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Request interview:&lt;/span&gt; &lt;b&gt;[[Inga the Influencer]]&lt;/b&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/inga.jpg&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/inga.jpg&quot;&gt;
 &lt;b&gt;Inga the Influencer&lt;/b&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;&lt;/div&gt;
 
 &lt;div class=&quot;Profile-Fred&quot;&gt;&lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $FredDone is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/fred.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/fred.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Request interview:&lt;/span&gt; &lt;b&gt;[[Fred the Frozen Food Magnate]]&lt;/b&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/fred.jpg&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/fred.jpg&quot;&gt;
 &lt;b&gt;Fred the Frozen Food Magnate&lt;/b&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;&lt;/div&gt;
@@ -1186,35 +1186,35 @@ $GayleAllFacts
 
 &lt;div class=&quot;Profile-Art&quot;&gt;&lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $ArtDone is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/art.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/art.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Request interview:&lt;/span&gt; &lt;b&gt;[[Art the Artisan Baker]]&lt;/b&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/art.jpg&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/art.jpg&quot;&gt;
 &lt;b&gt;Art the Artisan Baker&lt;/b&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;&lt;/div&gt;
 
 &lt;div class=&quot;Profile-Mary&quot;&gt;&lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $MaryDone is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/mary.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/mary.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Request interview:&lt;/span&gt; &lt;b&gt;[[Mary the Magazine Editor]]&lt;/b&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/mary.jpg&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/mary.jpg&quot;&gt;
 &lt;b&gt;Mary the Magazine Editor&lt;/b&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;&lt;/div&gt;
 
 &lt;div class=&quot;Profile-Gayle&quot;&gt;&lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $GayleDone is &quot;no&quot;&gt;&gt;
-	&lt;img src = &quot;https://www.mapsandlines.com/poison/gayle.jpg&quot;&gt;
+	&lt;img src = &quot;https://www.mapsandlines.com/twine/poison/gayle.jpg&quot;&gt;
 &lt;span style=&quot;font-size: .9em;&quot;&gt;Request interview:&lt;/span&gt; &lt;b&gt;[[Gayle the Game Show Winner]]&lt;/b&gt;
 	&lt;&lt;else&gt;&gt;
-    	&lt;img src=&quot;https://www.mapsandlines.com/poison/gayle.jpg&quot;&gt;
+    	&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/gayle.jpg&quot;&gt;
 &lt;b&gt;Gayle the Game Show Winner&lt;/b&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;&lt;/div&gt;
 
-&lt;/div&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="57" name="Widgets - Scenes" tags="widget" position="225,900" size="100,100">&lt;&lt;widget &quot;showImage&quot;&gt;&gt;&lt;img @src=&quot;&#39;https://www.mapsandlines.com/poison/&#39; +  $args[0] + &#39;.jpg&#39;&quot;&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="58" name="FROZEN FOOD REP Poisons Chef!" tags="" position="2100,3100" size="100,100">&lt;div class=&quot;scene&quot;&gt;
+&lt;/div&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="57" name="Widgets - Scenes" tags="widget" position="225,900" size="100,100">&lt;&lt;widget &quot;showImage&quot;&gt;&gt;&lt;img @src=&quot;&#39;https://www.mapsandlines.com/twine/poison/&#39; +  $args[0] + &#39;.jpg&#39;&quot;&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="58" name="FROZEN FOOD REP Poisons Chef!" tags="" position="2100,3100" size="100,100">&lt;div class=&quot;scene&quot;&gt;
     &lt;div class=&quot;scene-image&quot;&gt;
       &lt;&lt;showImage &quot;paper-frozen&quot;&gt;&gt;
     &lt;/div&gt;
@@ -1319,7 +1319,7 @@ You look through your notes and realize the detective is right. How embarrassing
   &lt;/div&gt;</tw-passagedata><tw-passagedata pid="64" name="The End" tags="noProfilesLink" position="2300,3900" size="100,100">&lt;div style=&quot;text-align: center; font-size: 26px; font-weight: bold;&quot;&gt;
 &lt;&lt;type 80ms&gt;&gt;Thank you for playing...&lt;&lt;/type&gt;&gt;
 
-&lt;&lt;type 100ms&gt;&gt;&lt;img src=&quot;https://www.mapsandlines.com/poison/take-a-bow.jpg&quot; style=&quot;width: 90%; max-width: 600px;&quot;&gt;&lt;&lt;/type&gt;&gt;
+&lt;&lt;type 100ms&gt;&gt;&lt;img src=&quot;https://www.mapsandlines.com/twine/poison/take-a-bow.jpg&quot; style=&quot;width: 90%; max-width: 600px;&quot;&gt;&lt;&lt;/type&gt;&gt;
 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="65" name="Mary&#39;s Confession" tags="" position="2500,3500" size="100,100">&lt;div class=&quot;scene&quot;&gt;
     &lt;div class=&quot;scene-image&quot;&gt;
