--- a/twine/poison/index.html
+++ b/twine/poison/index.html
@@ -119,7 +119,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 .show-profile img {width: 100%; border-radius: 10px; margin-right: 20px; }
 .suspect-profiles li {margin-bottom: 10px; margin-left: -10px;}
 
-.chapter-title {font-weight: bold; font-size: 1.5em; line-height: 1.2em;}
+.chapter-title {font-weight: bold; font-size: 1.5em; line-height: 1.2em; height: 1.5em;}
 
 
 .scene {display: flex; gap: 1.5rem;}
@@ -177,7 +177,7 @@ text-decoration: none;
     margin-top: 20px;
 }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">$(document).ready(function() {
-  $('head').append('<link rel="icon" href="https://www.mapsandlines.com/poison/poison-favicon.png" type="image/png">');
+  $('head').append('<link rel="icon" href="https://www.mapsandlines.com/twine/poison/poison-favicon.png" type="image/png">');
 });</script><tw-tag name="noProfilesLink" color="red"></tw-tag><tw-tag name="widget" color="purple"></tw-tag><tw-passagedata pid="1" name="ARTISAN BAKER Poisons Chef!" tags="" position="2300,3100" size="100,100">&lt;div class=&quot;scene&quot;&gt;
     &lt;div class=&quot;scene-image&quot;&gt;
       &lt;&lt;showImage &quot;paper-baker&quot;&gt;&gt;
