--- a/twine/poison/index.html
+++ b/twine/poison/index.html
@@ -202,7 +202,7 @@ You schedule a press conference for 10AM to discuss the details, and dream about
     &lt;div class=&quot;scene-content&quot;&gt;
 &lt;i&gt;Mon dieu!&lt;/i&gt; I know of nothing that happened in the 6 o&#39;clock hour, as I was in a much-deserved state of slumber. I had been working late into la nuit, architecting a new concept for a Canelé de Bordeaux with a lavender demi-glacé. Hence this morning my creative exhaustion outweighed my usual dynamism, so I remained in bed.
 
-The desk manager will confirm the seal of my electronic door lock remained unbroken until late morning. I am a man of the oven, not of the sunrise.
+The desk manager &lt;b&gt;will confirm&lt;/b&gt; the seal of my electronic door lock remained unbroken until late morning. I am a man of the oven, not of the sunrise.
     
 &lt;&lt;ArtNav&gt;&gt;
     &lt;/div&gt;
@@ -414,7 +414,7 @@ Well, let&#39;s see. My password is &quot;password&quot;. Pretty clever, huh? Wa
     &lt;div class=&quot;scene-content&quot;&gt;
 &lt;i&gt;Poisonous plants?!&lt;/i&gt; I already told you reporters, our factories are approaching EPA standards, and we are working on our ISO certification.
 
-Oh wait, you mean in the botanical sense? Not a chance. I don&#39;t believe in the all-natural organic growth trend. What consumers want is their food pumped full of preservatives that will endure to the apocalypse. I have the FDA inspection documents to prove my innocence.
+Oh wait, you mean in the botanical sense? Not a chance. I don&#39;t believe in the all-natural organic growth trend. What consumers want is their food pumped full of preservatives that will endure to the apocalypse. I have the FDA inspection documents to &lt;b&gt;prove my innocence&lt;/b&gt;.
 
 But &lt;b&gt;Gayle&lt;/b&gt; is a horticulturist. Last night I saw her having a debrief with &lt;b&gt;Art&lt;/b&gt; and &lt;b&gt;Mary&lt;/b&gt; about various toxins.
  
@@ -512,7 +512,7 @@ Drew Carey is a national treasure. I&#39;d do anything for Drew. Well, I probabl
     &lt;div class=&quot;scene-content&quot;&gt;
 Oh gosh, Jeff&#39;s password? I won&#39;t be much help there. It&#39;s nothing like the old game show where they say &quot;The password is...&quot; If I can&#39;t buy a vowel, I can&#39;t hack anyone&#39;s password.
 
-Welp. Survey says I zonked on that one. All of my co-workers can vouch for my lack of tech knowledge. But the rest of the guests are all so smart, maybe they can help!
+Welp. Survey says I zonked on that one. All of my co-workers &lt;b&gt;can vouch&lt;/b&gt; for my lack of tech knowledge. But the rest of the guests are all so smart, maybe they can help!
 
 I think &lt;b&gt;Fred&lt;/b&gt; works in the 177th floor of a New York office, he is probably real good at computers. &lt;b&gt;Inga&lt;/b&gt; is so young and hip, I bet she has a special app on her phone that can guess anyone&#39;s password. And &lt;b&gt;Mary&lt;/b&gt; is such a good writer. She could come up with the best guess yet. They&#39;re all bonus round winners in my mind.
     
@@ -664,7 +664,7 @@ So I was spilling tea with &lt;b&gt;Art&lt;/b&gt; last night, and he&#39;s got s
     &lt;div class=&quot;scene-content&quot;&gt;
 Hmm. I don&#39;t know anything about spore poisoning. But I once did a TikTok live from a vegan bakery that used dandilion yeast. The scones were, like, so rank, but it had this super raw, earthy aesthetic that really worked for my healing era.
 
-I have thousands of followers who will vouch for my innocence.
+I have thousands of followers who will &lt;b&gt;vouch for my innocence&lt;/b&gt;.
 
 Toxins just aren&#39;t my vibe. Ya&#39; know?
  
