--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class="sectiontitle">Fun & Games</div>
 	<div><a href="https://dialaquestion.com">Dial a Question</a></div>
 	<div><a href="https://dialaquestion.com/rather">Would You Rather...?</a></div>
-	<div><a href="twine/poison/index.html">Poison at the Bagel Convention<span class="smalltext"><br>An Interactive Mystery</span></a></div>
+	<div><a href="twine/index.html">Interactive Stories</div>
 	</div>
 
 
