--- a/twine/index.html
+++ b/twine/index.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Atma:wght@500&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../maps.css">
-<link rel="icon" type="image/x-icon" href="maps-favicon.png">
+<link rel="icon" type="image/x-icon" href="story-favicon.png">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
